syntax = "proto3";

package maptool;

option java_multiple_files = true;
option java_package = "net.rptools.maptool.server.proto";
option java_outer_classname = "HandshakeProtos";

/*
 * For easier differentiation between protobuf classes and "normal" classes
 * protobuf classes end with "Dto" or "Msg".
 */

import "data_transfer_objects.proto";

message HandshakeMsg {
  oneof message_type {
    // Client initiated messages
    ClientInitMsg client_init_msg = 1;
    ClientAuthMsg client_auth_message = 3;
    // Server initiated messages
    UseAuthTypeMsg use_auth_type_msg = 2;
    ConnectionSuccessfulMsg connection_successful_msg = 5;
    // Initiated by either server or client
    HandshakeResponseCodeMsg handshake_response_code_msg = 4;
  }
}
message ClientInitMsg {
  string player_name = 1;
  string version = 2;
  string public_key_md5 = 3;
}

message UseAuthTypeMsg {
  AuthTypeEnum auth_type = 1;
  bytes salt = 2;
  repeated bytes challenge = 3;
}

message ClientAuthMsg {
  bytes challenge_response = 1;
}

message ConnectionSuccessfulMsg {
  RoleDto role_dto = 1;
  ServerPolicyDto server_policy_dto = 2;
}

enum HandshakeResponseCodeMsg {
  UNKNOWN = 0;
  OK = 1;
  ERROR = 2;
  PLAYER_ALREADY_CONNECTED = 3;
  WRONG_VERSION = 4;
  INVALID_PASSWORD = 5;
  INVALID_PUBLIC_KEY = 6;
  INVALID_HANDSHAKE = 7;
}

enum AuthTypeEnum {
  SHARED_PASSWORD = 0;
  ASYMMETRIC_KEY = 1;
}